For now let us disable filters with options since we can't correctly support them.

BUG: 310230
FIXED-IN: 1.3-git